commiting old stuff

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
-  margin: 0;
   box-sizing: border-box;
   font-family: "assets/fonts/Mona Sans", Arial, Helvetica, sans-serif;
+  color: white;
 }
 
 @font-face {
@@ -14,6 +14,7 @@
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 .background {
@@ -23,14 +24,17 @@ body {
 
 body {
   display: flex;
+  min-height: 100vh;
 }
 
 nav {
   display: flex;
+  position: fixed;
   flex-direction: column;
   background-color: #25272b;
-  height: 100%;
+  height: auto;
   width: 20%;
+  min-height: 100vh;
 }
 
 nav h1 {
@@ -47,6 +51,7 @@ nav > a {
 
 .section {
   margin: 2%;
+  margin-left: 23%;
 }
 
 nav .footer {
@@ -75,6 +80,7 @@ body {
 
 .background {
   z-index: -1;
+  background-size: cover;
 }
 
 body {
@@ -99,10 +105,6 @@ nav > a {
   margin-right: auto;
   margin-top: 10%;
   text-align: left;
-}
-
-.section {
-  margin: 2%;
 }
 
 nav .footer {
