--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,13 @@
   scroll-behavior: smooth;
 }
 
+main * {
+  margin: 2% 0 0 0;
+}
+main > div {
+  margin-bottom: 24px; /* Adjust this value as needed */
+}
+
 @font-face {
   font-family: "Mona Sans";
   src: url("assets/fonts/Mona-Sans.woff2") format("woff2");
@@ -33,6 +40,38 @@
   font-weight: 300;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Phantom Sans";
+  src: url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff")
+      format("woff"),
+    url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Regular.woff2")
+      format("woff2");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Phantom Sans";
+  src: url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff")
+      format("woff"),
+    url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Italic.woff2")
+      format("woff2");
+  font-weight: normal;
+  font-style: italic;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Phantom Sans";
+  src: url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff")
+      format("woff"),
+    url("https://assets.hackclub.com/fonts/Phantom_Sans_0.7/Bold.woff2")
+      format("woff2");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
 html,
 body {
   height: 100%;
@@ -47,7 +86,7 @@ body {
 body {
   display: flex;
   min-height: 100vh;
-  font-family: "JetBrains Mono", monospace;
+  font-family: "Phantom Sans", monospace;
 }
 
 nav {
@@ -56,7 +95,7 @@ nav {
   flex-direction: column;
   background-color: #25272b;
   height: auto;
-  width: 20%;
+  width: 23%;
   min-height: 100vh;
   font-family: "JetBrains Mono", monospace;
 }
@@ -80,10 +119,26 @@ nav ul {
   margin-bottom: 20px;
 }
 
-.section {
+main {
   margin: 2%;
-  margin-left: 23%;
+  margin-left: 25%;
 }
+
+main h2 {
+  font-size: 40px;
+}
+
+main h3 {
+  font-size: 30px;
+}
+
+main p {
+  font-size: 20px;
+}
+/* 
+main ul li {
+  font-size: 20px;
+} */
 
 nav .footer {
   font-size: 3px;
